[gd_scene load_steps=5 format=3 uid="uid://dp3rgqaehb3xu"]

[ext_resource type="Script" path="res://scenes/OptionsMenu/Input/InputOptionsMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://beg4vmqhsx6ak" path="res://icon.svg" id="2_2vovj"]
[ext_resource type="Script" path="res://scenes/OptionsMenu/Input/Sprite2D.gd" id="3_7dtrp"]
[ext_resource type="Script" path="res://scenes/OptionsMenu/Input/KeyAssignmentDialog.gd" id="3_wsh2h"]

[node name="Controls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Input Name"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Input Key"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="InputsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResetButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Reset"

[node name="KeyAssignmentDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Assign Key"
size = Vector2i(400, 100)
dialog_text = "Press a key or button..."
script = ExtResource("3_wsh2h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(647, 538)
texture = ExtResource("2_2vovj")
script = ExtResource("3_7dtrp")

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="event_choosed" from="KeyAssignmentDialog" to="." method="_on_key_assignment_dialog_event_choosed"]
